# fast-api-template

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: run-tests.yml
app/: config.py  hashing.py  models.py  server.py
app/controllers/: base.py  deps.py  post.py  post_category.py  session.py  user.py
app/database/: connection.py  deps.py
app/exceptions/: user.py
app/repositories/: base.py  deps.py  post.py  post_category.py  user.py
app/routes/: post_categories.py  posts.py  sessions.py  users.py
app/schemas/: post.py  post_category.py  sessions.py  users.py
app/services/: auth.py  bucket_manager.py
migrations/: env.py
migrations/versions/: 4bf52d4fc8ff_create_initial_tables.py
scripts/: db_seed.py
tests/: conftest.py  factories.py
tests/controllers/: test_post_controller.py  test_session_controller.py  test_user_controller.py
